--- a/Clinica/Views/Operacion/Index.cshtml
+++ b/Clinica/Views/Operacion/Index.cshtml
@@ -1,307 +1,75 @@
-﻿@model BusinessEntities.BEOrdenInternamiento
+﻿@model IEnumerable<BusinessEntities.BEOrdenInternamiento>
 
 @{
-    ViewBag.Title = "Bitacora";
+    ViewBag.Title = "Bitacora de Atención";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <script src="@Url.Content("~/Scripts/jquery-1.8.2.js")" type="text/javascript"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("input[name=Numero]").attr('readonly', 'readonly');
-        $("input[name=PacienteNombre]").attr('readonly', 'readonly');
-        $("input[name=HabitacionNombre]").attr('readonly', 'readonly');
-        $("input[name=DoctorNombre]").attr('readonly', 'readonly');
 
-        $("input[type=radio]").click(function () {
-            var radio = $(this);
-            var nameText = $(this).attr('name').replace('o', 't');
-            var text = $("input[name=" + nameText + "]");
+<h2>Operaciones</h2>
+@using (Html.BeginForm())
+{
+    <div class="editor-label">
+        Apellido del Paciente : <input type="text" id="a" name="paciente" value="" />
+    </div>
+    <div class="editor-field">
+        Nombre del Paciente : <input type="text" id="b" name="pacientenombre" value="" />
+    </div>
 
-            if (radio.val() == "NO") {
-                $(text).css({ "visibility": "visible" });
-                $(text).css({ "display": "block" });
-            }
-            else {
-                $(text).css({ "visibility": "hidden" });
-                $(text).css({ "display": "none" });
-            }
-            $(text).val('');
-        });
-    });
+    <input type="submit" value="Buscar" />
+    <button value="Limpiar" onclick="$('input[name=paciente]').val(''); $('input[name=pacientenombre]').val('');">Limpiar</button>
+}
 
-    function siguiente() {
-        var next = $('input#next').val();
-        var allRadios = $('input[type=radio]');
-        var nameRadio;
-        var valueRadio;
-        var valueText;
-        var ok;
-        
-        if (next == "000") {
-            var procedimiento = $("#Procedimiento option:selected").val();
-
-            if (procedimiento == "") {
-                alert("Debe seleccionar un procedimiento");
-                return;
-            }
-            else {
-                $('input#next').val('001');
-                $('#procedimiento').css({ "visibility": "hidden" });
-                $('#procedimiento').css({ "display": "none" });
-                $('#entrada').css({ "visibility": "visible" });
-                $('#entrada').css({ "display": "block" });
-
-                return;
-            }
-        }
-        else if (next == "001") {
-            ok = true;
-
-            $.each(allRadios, function (i, val) {
-                nameRadio = $(this).attr('name');
-                
-                if (nameRadio.substr(0, 3) == "011") {
-                    valueRadio = $("input[name=" + nameRadio + "]:checked").val();
-
-                    if (valueRadio == "NO") {
-                        valueText = $("input[name=" + nameRadio.replace('o', 't') + "]").val();
-
-                        if (valueText == "") {
-                            alert('Debe ingresar el valor para la respuesta negativa');
-                            ok = false;
-                            return false;
-                        }
-                    }
-                    else if (valueRadio == "SI") {
-                    }
-                    else {
-                        alert('Debe seleccionar una respuesta');
-                        ok = false;
-                        return false;
-                    }
-                }
-            });
-
-            if (ok == true) {
-                $('input#next').val('002');
-                $('#entrada').css({ "visibility": "hidden" });
-                $('#entrada').css({ "display": "none" });
-                $('#pausa').css({ "visibility": "visible" });
-                $('#pausa').css({ "display": "block" });
-            }            
-
-            return;
-        }
-        else if (next == "002") {
-            ok = true;
-
-            $.each(allRadios, function (i, val) {
-                nameRadio = $(this).attr('name');
-
-                if (nameRadio.substr(0, 3) == "012") {
-                    valueRadio = $("input[name=" + nameRadio + "]:checked").val();
-
-                    if (valueRadio == "NO") {
-                        valueText = $("input[name=" + nameRadio.replace('o', 't') + "]").val();
-
-                        if (valueText == "") {
-                            alert('Debe ingresar el valor para la respuesta negativa');
-                            ok = false;
-                            return false;
-                        }
-                    }
-                    else if (valueRadio == "SI") {
-                    }
-                    else {
-                        alert('Debe seleccionar una respuesta');
-                        ok = false;
-                        return false;
-                    }
-                }
-            });
-
-            if (ok == true) {
-                $('input#next').val('003');
-                $('#pausa').css({ "visibility": "hidden" });
-                $('#pausa').css({ "display": "none" });
-                $('#salida').css({ "visibility": "visible" });
-                $('#salida').css({ "display": "block" });
-                $('#next').html('Guardar');
-            }
-
-            return;
-        }
-        else if (next == "003") {
-            ok = true;
-
-            $.each(allRadios, function (i, val) {
-                nameRadio = $(this).attr('name');
-
-                if (nameRadio.substr(0, 3) == "012") {
-                    valueRadio = $("input[name=" + nameRadio + "]:checked").val();
-
-                    if (valueRadio == "NO") {
-                        valueText = $("input[name=" + nameRadio.replace('o', 't') + "]").val();
-
-                        if (valueText == "") {
-                            alert('Debe ingresar el valor para la respuesta negativa');
-                            ok = false;
-                            return false;
-                        }
-                    }
-                    else if (valueRadio == "SI") {
-                    }
-                    else {
-                        alert('Debe seleccionar una respuesta');
-                        ok = false;
-                        return false;
-                    }
-                }
-            });
-
-            if (ok == true) {
-                $("input[name='enviar']").click();
-            }
-
-            
-        }
-        //return false;
-    }
-</script>
-
-<h2>Lista de Verificacion de Requisitos</h2>
 
 <p>@ViewBag.Mensaje</p>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
-    @Html.HiddenFor(model => model.IdOrdenInternamiento)
+<table border="1">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.PacienteNombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DoctorNombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Numero)
+        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.HabitacionNombre)
+            </th>*@
+        <th>
 
-    <table border="0" cellpadding="0" cellspacing="0" style="border: 2px solid black;">
-        <tr>
-            <td>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.PacienteNombre)
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.PacienteNombre)
-                </div>
-            </td>
-            <td>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.Numero)
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.Numero)
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.HabitacionNombre)
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.HabitacionNombre)
-                </div>
-            </td>
-            <td>
-                <div class="editor-label">
-                    @Html.LabelFor(model => model.DoctorNombre)
-                </div>
-                <div class="editor-field">
-                    @Html.EditorFor(model => model.DoctorNombre)
-                </div>
-            </td>
-        </tr>
-    </table>
-    <br />
-    <input type="hidden" id="next" value="000" />
-    <table id="procedimiento" border="0" cellpadding="0" cellspacing="0" style="border: 2px solid black;">
-        <tr>
-            <td>
-                <div class="editor-label">
-                    Procedimiento:
-                </div>
-                <div class="editor-field">
-                    @Html.DropDownList("Procedimiento", (SelectList)ViewBag.ListaProcedimiento, "-- Seleccione --", new { Id = "Procedimiento" })
-                </div>
-            </td>
-        </tr>
-    </table>
-    <table id="entrada" border="0" cellpadding="0" cellspacing="0" style="border: 2px solid black; visibility: hidden; display: none;">
-        <tr>
-            <th>SI / NO</th>
-            <th>Entrada</th>
-        </tr>
+        </th>
+    </tr>
 
-        @foreach (var entrada in ViewBag.ListaEntrada)
-        {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
-                <input type="radio" id="011o@(entrada.Value)" name="011o@(entrada.Value)" value="SI" style="width: 20px;" />
-                <input type="radio" id="011o@(entrada.Value)" name="011o@(entrada.Value)" value="NO" style="width: 20px;" />
+                @Html.DisplayFor(modelItem => item.PacienteNombre)
             </td>
-            <td style="width: 500px;">
-                @entrada.Text
-                <br />
-                <input type="text" name="011t@(entrada.Value)" value="" style="visibility: hidden; display: none;" />
-            </td>                       
-        </tr>
-        }
-    </table>
-    <table id="pausa" border="0" cellpadding="0" cellspacing="0" style="border: 2px solid black; visibility: hidden; display: none;">
-        <tr>
-            <th>SI / NO</th>
-            <th>Pausa Quirurgica</th>
-        </tr>
-
-        @foreach (var pausa in ViewBag.ListaPausaQuirurgica)
-        {
-        <tr>
             <td>
-                <input type="radio" id="012o@(pausa.Value)" name="012o@(pausa.Value)" value="SI" style="width: 20px;" />
-                <input type="radio" id="012o@(pausa.Value)" name="012o@(pausa.Value)" value="NO" style="width: 20px;" />
+                @Html.DisplayFor(modelItem => item.DoctorNombre)
             </td>
-            <td style="width: 500px;">
-                @pausa.Text
-                <br />
-                <input type="text" name="012t@(pausa.Value)" value="" style="visibility: hidden; display: none;" /> 
-            </td>                       
-        </tr>
-        }
-    </table>
-    <table id="salida" border="0" cellpadding="0" cellspacing="0" style="border: 2px solid black; visibility: hidden; display: none;">
-        <tr>
-            <th>SI / NO</th>
-            <th>Salida</th>
-        </tr>
-
-        @foreach (var salida in ViewBag.ListaSalida)
-        {
-        <tr>
             <td>
-                <input type="radio" id="013o@(salida.Value)" name="013o@(salida.Value)" value="SI" style="width: 20px;" />
-                <input type="radio" id="013o@(salida.Value)" name="013o@(salida.Value)" value="NO" style="width: 20px;" />
+                @Html.DisplayFor(modelItem => item.Numero)
             </td>
-            <td style="width: 500px;">
-                @salida.Text
-                <br />
-                <input type="text" name="013t@(salida.Value)" value="" style="visibility: hidden; display: none;" />
-            </td>                       
+            <td>
+                @if (string.IsNullOrEmpty(item.Estado))
+                {
+                    @Html.ActionLink("Generar Entrada", "Generar", new { id = item.IdOrdenInternamiento })
+                }
+                else if (item.Estado.Equals("011"))
+                {
+                    @Html.ActionLink("en Pausa", "Pausa", new { id = item.IdOrdenInternamiento })
+                }
+                else 
+                {
+                    @Html.ActionLink("Salida", "Salida", new { id = item.IdOrdenInternamiento })
+                }
+            </td>
         </tr>
-        }
-    </table>
-    <br />
-    <button id="next" type="button" onclick="siguiente()">Siguiente</button>
-    <input id="submit" type="submit" value="Actualizar" name="enviar" style="visibility: hidden; display: none;" />
-}
+    }
 
-<br />
-<br />
-<div>
-    @Html.ActionLink("Regresar", "Index", "Home")
-</div>
+</table>
