Ajustes a Checklist de Requisitos

--- a/Clinica/Views/Home/Index.cshtml
+++ b/Clinica/Views/Home/Index.cshtml
@@ -42,6 +42,11 @@
 
     <li class="five">
         <h5>Caso de Uso: Registrar Checklist de Requisitos</h5>
-        @Html.ActionLink("Iniciar", "Index", "Operacion", new { intID = 1 }, null)
+        @Html.ActionLink("Iniciar", "Index", "Operacion")
+    </li>
+
+    <li class="six">
+        <h5>Caso de Uso: Mantener Alta Médica</h5>
+        @Html.ActionLink("Iniciar", "Index", "Home")
     </li>
 </ol>
