ctualizacion de Alta Medica

--- a/Clinica/Views/Home/Index.cshtml
+++ b/Clinica/Views/Home/Index.cshtml
@@ -47,6 +47,6 @@
 
     <li class="six">
         <h5>Caso de Uso: Mantener Alta Médica</h5>
-        @Html.ActionLink("Iniciar", "Index", "Home")
+        @Html.ActionLink("Iniciar", "Index", "MantenerAltaMedica")
     </li>
 </ol>
