--- a/Clinica/Views/Home/Index.cshtml
+++ b/Clinica/Views/Home/Index.cshtml
@@ -19,6 +19,9 @@
     </section>
 }
 <h3>Casos de Uso:</h3>
+<table style="width:100%">
+    <tr>
+        <td>
 <ol class="round">
     <li class="one">
         <h5>Caso de Uso: Registrar Cama</h5>
@@ -34,7 +37,10 @@
         <h5>Caso de Uso: Mantener Bitacora de Internamiento</h5>
         @Html.ActionLink("Iniciar", "Asignacion", "Bitacora")
     </li>
-
+</ol>
+        </td>
+        <td>
+<ol class="round">
     <li class="four">
         <h5>Caso de Uso: Consultar Bitacora de Internamiento</h5>
         @Html.ActionLink("Iniciar", "Index", "Bitacora")
@@ -50,3 +56,7 @@
         @Html.ActionLink("Iniciar", "Index", "MantenerAltaMedica")
     </li>
 </ol>
+        </td>
+    </tr>
+</table>
+
