--- a/Clinica/Views/Bitacora/Index.cshtml
+++ b/Clinica/Views/Bitacora/Index.cshtml
@@ -7,7 +7,7 @@
 
 <script src="@Url.Content("~/Scripts/jquery-1.8.2.js")" type="text/javascript"></script>
 
-<h2>Administración de Bitacora</h2>
+<h2>Consulta de Bitácora</h2>
 @using (Html.BeginForm())
 {
     <div class="editor-label">        
@@ -23,23 +23,24 @@
 
 <p>@ViewBag.Mensaje</p>
 
-<table border="1">
+@if (Model.Count<BusinessEntities.BEOrdenInternamiento>() > 0) {
+
+<div class="TablaListadoGH">
+<table>
     <tr>
-        <th>
+        <td>
             @Html.DisplayNameFor(model => model.PacienteNombre)
-        </th>
-        <th>
+        </td>
+        <td>
             @Html.DisplayNameFor(model => model.DoctorNombre)
-        </th>
-        <th>
+        </td>
+        <td>
             @Html.DisplayNameFor(model => model.Numero)
-        </th>
-        @*<th>
+        </td>
+        @*<td>
             @Html.DisplayNameFor(model => model.HabitacionNombre)
-        </th>*@
-         <th>
-            
-        </th>
+        </td>*@
+         <td></td>
     </tr>
 
 @foreach (var item in Model) {
@@ -63,3 +64,5 @@
 }
 
 </table>
+</div>
+}
