--- a/Clinica/Views/Operacion/Index.cshtml
+++ b/Clinica/Views/Operacion/Index.cshtml
@@ -7,7 +7,9 @@
 
 <script src="@Url.Content("~/Scripts/jquery-1.8.2.js")" type="text/javascript"></script>
 
-<h2>Operaciones</h2>
+
+
+<h2>Búsqueda de Ordenes de Internamiento</h2>
 @using (Html.BeginForm())
 {
     <div class="editor-label">
@@ -26,22 +28,21 @@
 
 @if (Model.Count<BusinessEntities.BEOrdenInternamiento>() > 0) {
 
-<table border="1">
+<div class="TablaListadoGH" >
+<table>
     <tr>
-        <th style="width: 200px;">
+        <td style="width: 200px;">
             @Html.DisplayNameFor(model => model.PacienteNombre)
-        </th>
-        <th style="width: 200px;">
+        </td>
+        <td style="width: 200px;">
             @Html.DisplayNameFor(model => model.DoctorNombre)
-        </th>
-        <th style="width: 200px;">
+        </td>
+        <td style="width: 200px;">
             @Html.DisplayNameFor(model => model.Numero)
-        </th>
-        <th style="width: 200px;">
+        </td>
+        <td style="width: 200px;">
              Acción
-        <th>
-
-        </th>
+        </td>
     </tr>
 
     @foreach (var item in Model)
@@ -63,7 +64,7 @@
                 }
                 else if (item.Estado.Equals("011"))
                 {
-                    @Html.ActionLink("en Pausa", "Pausa", new { id = item.IdOrdenInternamiento })
+                    @Html.ActionLink("En Pausa", "Pausa", new { id = item.IdOrdenInternamiento })
                 }
                 else 
                 {
@@ -74,4 +75,5 @@
     }
 
 </table>
+</div>
 }
